# Consulta-Series-Code-BYD

./: .env_sample  .gitignore  README.md  pyproject.toml
data/: fake_model.csv
src/: byd_series_code.py
